--- a/package.json
+++ b/package.json
@@ -4,35 +4,36 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-  "dev": "vite --open",
-  "build": "vite build",
-  "preview": "vite preview",
-  "prettier": "prettier 'src/**/*.{js,jsx,ts,tsx,css,scss,md}' --write",
-  "lint": "eslint --fix",
-  "format": "npm run lint && npm run prettier",
-  "prepare": "husky"
+    "dev": "vite --open",
+    "build": "vite build",
+    "preview": "vite preview",
+    "prettier": "prettier 'src/**/*.{js,jsx,ts,tsx,css,scss,md}' --write",
+    "lint": "eslint --fix",
+    "format": "npm run lint && npm run prettier",
+    "prepare": "husky"
   },
   "devDependencies": {
-  "@eslint/js": "^9.14.0",
-  "autoprefixer": "^10.4.20",
-  "eslint": "^9.14.0",
-  "eslint-config-prettier": "^9.1.0",
-  "eslint-plugin-prettier": "^5.2.1",
-  "globals": "^15.12.0",
-  "husky": "^9.1.6",
-  "postcss": "^8.4.47",
-  "postcss-load-config": "^6.0.1",
-  "prettier": "3.3.3",
-  "sass-embedded": "^1.80.6",
-  "vite": "^5.4.10",
-  "vite-plugin-clean": "^1.0.0"
+    "@eslint/js": "^9.14.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.14.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.3",
+    "globals": "^15.12.0",
+    "husky": "^9.1.6",
+    "postcss": "^8.5.1",
+    "postcss-load-config": "^6.0.1",
+    "prettier": "3.3.3",
+    "sass-embedded": "^1.80.6",
+    "tailwindcss": "^3.4.17",
+    "vite": "^5.4.10",
+    "vite-plugin-clean": "^1.0.0"
   },
   "dependencies": {
-  "modern-normalize": "^3.0.1"
+    "modern-normalize": "^3.0.1"
   },
   "lint-staged": {
-  "src/**/*.{js,jsx,ts,tsx,css,scss,md}": [
-  "npm run format"
-  ]
+    "src/**/*.{js,jsx,ts,tsx,css,scss,md}": [
+      "npm run format"
+    ]
   }
-  }
+}
