--- a/package.json
+++ b/package.json
@@ -20,19 +20,17 @@
     "eslint-plugin-prettier": "^5.2.3",
     "globals": "^15.12.0",
     "husky": "^9.1.6",
-    "postcss": "^8.5.1",
-    "postcss-load-config": "^6.0.1",
     "prettier": "3.3.3",
-    "sass-embedded": "^1.80.6",
-    "tailwindcss": "^3.4.17",
     "vite": "^5.4.10",
     "vite-plugin-clean": "^1.0.0"
   },
   "dependencies": {
-    "modern-normalize": "^3.0.1"
+    "@tailwindcss/vite": "^4.0.4",
+    "modern-normalize": "^3.0.1",
+    "tailwindcss": "^4.0.4"
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,css,scss,md}": [
+    "./src/**/*.{js,jsx,ts,tsx,css,scss,md}": [
       "npm run format"
     ]
   }
